feat: Allow listing collection by name
This allows clients to easily locate a collection ID given a name.
